# THU_ROS2_Tutorial

./: .gitignore  kr2_robot_a1018kr2_arm_baseend_effector_5000_1.000000_1.000000.ikcache  listener.txt  publisher.txt
src/griplink/: CMakeLists.txt  package.xml
src/griplink/include/griplink/demo_node/: demo_node.hpp
src/griplink/include/griplink/griplink_node/: common.hpp  griplink.hpp  griplink_node.hpp
src/griplink/launch/: demo_launch.py  launch.py
src/griplink/src/demo_node/: demo_node.cpp  main.cpp
src/griplink/src/griplink_node/: common.cpp  griplink.cpp  griplink_node.cpp  main.cpp
src/griplink_interfaces/: CMakeLists.txt  package.xml
src/griplink_interfaces/action/: Flexgrip.action  Flexrelease.action  Release.action
src/griplink_interfaces/msg/: DeviceStates.msg
src/griplink_interfaces/srv/: Bye.srv  Clamp.srv  Devassert.srv  Devname.srv  Devpid.srv  Devsn.srv  Devstate.srv  Devtagget.srv  Devtagset.srv  Devvendor.srv  Devver.srv  Devvid.srv  Flexgrip.srv  Flexrelease.srv  Grip.srv  Gripcfgget.srv  Gripcfgset.srv  Home.srv  Id.srv  Labelget.srv  Labelset.srv  Protassert.srv  Protocol.srv  Setval.srv  Sn.srv  Value.srv  Ver.srv  Verbose.srv  Waitval.srv  Wstr.srv
src/orange-ros2/kr_example/cpp/: CMakeLists.txt  package.xml
src/orange-ros2/kr_example/python/: package.xml  setup.cfg  setup.py
src/orange-ros2/kr_msgs/: CMakeLists.txt  package.xml
src/orange-ros2/kr_msgs/msg/: FollowJoint.msg  FollowLinear.msg  GeometryPlane.msg  JogJoint.msg  JogLinear.msg  MotionHeartbeat.msg  Number.msg  ProgramInteract.msg  Quadrature.msg  RobotMode.msg  RobotPose.msg  RobotState.msg  SafetyEvent.msg  SafetyMode.msg  SafetyZone.msg  SelfMotion.msg  SystemState.msg
src/orange-ros2/kr_msgs/srv/io/: ConfigAnalogOutput.srv  ConfigDiscreteOutput.srv  ConfigQuadratureInput.srv  GetAnalogInput.srv  GetDiscreteInput.srv  GetQuadratureInput.srv  SetAnalogOutput.srv  SetDiscreteOutput.srv
src/orange-ros2/kr_msgs/srv/motion/: MoveJoint.srv  MoveLinear.srv  MoveSpline.srv  PauseMotion.srv  ResumeMotion.srv  SelectJoggingFrame.srv  SetCustomFrame.srv  SetInteractivity.srv  TerminateMotion.srv
src/orange-ros2/kr_msgs/srv/program/: GetProgramState.srv  PauseProgram.srv  ProgramRecovery.srv  ResumeProgram.srv  StepProgram.srv  StopProgram.srv
src/orange-ros2/kr_msgs/srv/robot/: GetRobotPose.srv  GetSystemFrame.srv  GetSystemLoad.srv  SetSystemFrame.srv  SetSystemLoad.srv
src/orange-ros2/kr_msgs/srv/system/: GetMasterSpeed.srv  GetRobotMode.srv  GetRobotState.srv  GetSafetyMode.srv  GetSafetyZones.srv  LogAlarm.srv  SuspendRobot.srv  UnlockRobot.srv  UnsuspendRobot.srv
src/ros2_description/: ._CMakeLists.txt  CMakeLists.txt  package.xml
src/ros2_description/kr2_robot_model/meshes/: a810_Base.stl  a810_Link2.stl  a810_Link3.stl  a810_Link4.stl  a810_Link5.stl  a810_Link6.stl  a810_Link7.stl  a810_ToolIO.stl
src/ros2_description/kr2_robot_model/meshes/a1018/: ._a1018_Flange.stl  a1018_Base.stl  a1018_Link2.stl  a1018_Link3.stl  a1018_Link5.stl  a1018_Link7.stl  a1018_ToolIO.stl
src/ros2_description/kr2_robot_model/meshes/a1205/: ._a1205_Link5.stl  a1205_Base.stl  a1205_Link3.stl  a1205_Link4.stl  a1205_Link5.stl  a1205_Link7.stl  a1205_ToolIO.stl
src/ros2_description/kr2_robot_model/meshes/a1410/: a1410_Link3.stl  a1410_Link5.stl  a1410_Link7.stl  a1410_ToolIO.stl
src/ros2_description/kr2_robot_model/meshes/a1805/: a1805_Link2.stl  a1805_Link3.stl  a1805_Link4.stl  a1805_Link5.stl  a1805_Link6.stl  a1805_Link7.stl  a1805_ToolIO.stl
src/ros2_description/kr2_robot_model/urdf/: ._kr2_robot_S00V0000M1018.urdf  ._kr2_robot_S00V0000M1205.urdf  ._kr2_robot_S00V0000M1410.urdf  ._kr2_robot_S00V0000M1805.urdf  ._kr2_robot_S00V0003M0810.urdf  ._kr2_robot_S00V0003M1205.urdf  ._kr2_robot_S00V0100M0810.urdf  kr2_robot_S00V0000M1018.urdf  kr2_robot_S00V0000M1205.urdf  kr2_robot_S00V0000M1410.urdf  kr2_robot_S00V0000M1805.urdf  kr2_robot_S00V0003M0810.urdf  kr2_robot_S00V0003M1018.urdf  kr2_robot_S00V0003M1205.urdf  kr2_robot_S00V0003M1410.urdf  kr2_robot_S00V0003M1805.urdf  kr2_robot_S00V0100M0810.urdf
src/ros2_description/launch/: gazebo_a810_r2.launch.py  gazebo_ros2.launch.py  kr2_mtest.launch  kr2_robot_big.rviz  kr2_robot_param.launch  kr2_robot_ros2.rviz  kr2_robot_rviz_ros2.launch  kr2_robot_rviz_ros2.launch.py  kr2_robot_rviz_ros2_remote.launch  robot_controller_gazebo.yaml
